--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "start-js": "react-scripts start",
     "start-css": "sass --style=compressed --watch src/sass/styles.scss:public/css/styles.css",
     "start": "concurrently \"npm run start-js\" \"npm run start-css\"",
-    "build-js": "react-scripts build --prod",
+    "build-js": "react-scripts build",
     "build-css": "sass --style=compressed --no-source-map src/sass/styles.scss:public/css/styles.css",
     "build": "concurrently \"npm run build-css\" \"npm run build-js\"",
     "test": "react-scripts test",
